--- a/frontend/src/main/css/bootstrap.css
+++ b/frontend/src/main/css/bootstrap.css
@@ -11,7 +11,6 @@ html {
 }
 body {
   margin: 0;
-  background-image: url("texture.jpg");
 }
 article,
 aside,
@@ -199,6 +198,7 @@ th {
     -webkit-box-shadow: none !important;
             box-shadow: none !important;
   }
+  a,
   a:visited {
     text-decoration: underline;
   }
@@ -1290,20 +1290,10 @@ p {
   margin: 0 0 10px;
 }
 .lead {
-    margin-bottom: 20px;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 1.4;
-}
-.logininfo {
-    font-size: 14px;
-    color: white;
-    display: none;
-    position: absolute;
-    padding: 14px 20px;
-    background-color: gray;
-    border-radius: 4px;
-    margin: 10px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.4;
 }
 @media (min-width: 768px) {
   .lead {
@@ -1419,7 +1409,7 @@ a.bg-danger:focus {
 }
 .page-header {
   padding-bottom: 9px;
-  margin: 70px 0 20px;
+  margin: 40px 0 20px;
   border-bottom: 1px solid #eee;
 }
 ul,
